<resources>
    <string name="app_name">Het wapen van Roosendaal</string>
    <string name="welkom">Welkom bij onze nieuwe app</string>
    <string name="aankomend_evenement">Aankomend evenement</string>
    <string name="aankomend_evenement_beschrijving">Op 2 april om 14:00 is het weer zo ver! 5 zaken waaronder \'t Wapen trekken alles uit de kast om Roosendaal en omstreken te laten genieten van heerlijke speciaalbieren met prachtige culinaire combinaties tijdens de Bier- &amp; Spijs route.</string>
    <string name="openingstijden">Openingstijden</string>
    <string name="dinsdag">Dinsdag</string>
    <string name="other_days">Woensdag \n tot \n Maandag</string>
    <string name="closed">Gesloten</string>
    <string name="working_hours">09:30\n - \n02:00</string>
    <string name="mail_adres">reserveren@wapenvanroosendaal.nl</string>
    <string name="phone_number">0165 534 376</string>
    <string name="contact">Contact</string>
    <string name="img_text_1">Welkom bij het wapen van roosendaal</string>
    <string name="img_text_2">“In ons café vind je gezelligheid onder vrienden, familie en collega’s!”</string>

    <string name="condition2">Geen behoud van niet genomen bieren</string>
    <string name="price">€77,- per maand</string>
    <string name="condition1">Geen 2 bieren tegelijk afnemen</string>
    <string name="event_discount">10% korting op al onze evenementen</string>
    <string name="and_get">en krijg</string>
    <string name="variation_on_tap">Elke maand andere bieren op de tap</string>
    <string name="own_choise">Allemaal naar eigen keuze van de tap</string>
    <string name="amount_of_beer">16 biertjes</string>
    <string name="subscription_title">Abonnement het Wapen</string>
    <string name="activate_subscription">Afsluiten kan op de website of bij een medewerker op locatie</string>

    <string name="paragraf_1">Het Wapen van Roosendaal is al ruim 50 jaar een gezellig modern bruin café in hartje Roosendaal. Een kroeg die voor iedereen wat te bieden heeft. Hele generaties groeiden op in en bij het Wapen, zowel voor als achter de bar!</string>
    <string name="paragraf_2">Het is allemaal begonnen met tante Jopie en Pierre. Zij toverden in 1970 Hotel Hermans om tot Biljartcafé het Wapen van Roosendaal. Toen in 1986 naast Henri ook Anja als vennoot in het bedrijf kwam, besloten Jopie en Pierre ermee te stoppen.</string>
    <string name="paragraf_3">Henri en Anja sloegen vanaf dat moment een andere weg in. Ze besloten minder met eten te gaan doen en er meer een café van te maken. In 2002 werd er een grote aanbouw geplaatst om biljarters meer plek te geven en een feestzaal en voorraadruimte te creëren.</string>
    <string name="paragraf_4">Na vanaf haar veertiende bij haar ouders in het café gewerkt te hebben, werd Maaike in 2007 mede-eigenaar.</string>
    <string name="paragraf_5">In 2012 werden de tosti’s van het Wapen geïntroduceerd. De lunchkaart kwam hiermee weer terug en dit vroeg ook om de nodige aanpassingen in de inmiddels verouderde keuken. In 2015 werd de keuken verbouwd met het oog op verdere groei in de toekomst.</string>
    <string name="paragraf_6">Stilstand is achteruitgang. In 2019 werd het café daarom groots verbouwd om met de trend van speciaalbier mee te kunnen gaan. Nu heeft het Wapen de mooiste tapinstallatie van Nederland met maar liefst 24 tapkranen! In 2020 stopte Henri en ging hij genieten van zijn welverdiende pensioen.</string>
    <string name="paragraf_7">Zoals je ziet is het Wapen sinds 1970 zeker gegroeid, maar de basis is altijd belangrijk gebleven. Zo zijn we nog steeds de thuisbasis van veel carnavalsbandjes, verenigingen, clubjes en vriendengroepen. Na al die jaren zijn we nog steeds de huiskamer van Roosendaal.</string>

    <string name="beer_name">Bier nummer 1</string>
    <string name="brewery_name">Het wapen van roosendaal</string>
    <string name="brewery_type">Bruin cafè</string>
    <string name="brewery_location">Roosendaal, Noord-Brabant</string>

    <string name="home">home</string>
    <string name="menu">Menu</string>
    <string name="subscription">Abonnement</string>
    <string name="loadingText">Tapping Beer...</string>


</resources>