<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.homepage.Homepage"
    android:background="@color/MainRed"

    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:labelFor="@+id/scollTap">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="top|center">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/Header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:layout_marginStart="32dp"
                    android:src="@drawable/logo_het_wapen"
                    app:layout_constraintBottom_toBottomOf="@+id/textView2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView2" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:text="@string/welkom"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView8"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/Event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/secondary">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/aankomend_evenement"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toStartOf="@+id/imageView7"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="259dp"
                    android:layout_height="107dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/aankomend_evenement_beschrijving"
                    app:layout_constraintEnd_toStartOf="@+id/imageView7"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="123dp"
                    android:layout_height="145dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView3"
                    tools:src="@drawable/spijs" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <HorizontalScrollView
                android:id="@+id/TapView"
                android:layout_width="match_parent"
                android:layout_height="108dp"
                android:layout_marginTop="64dp"
                android:background="@color/secondary"
                android:scrollbars="none">

                <LinearLayout
                    android:id="@+id/currentlyOnTap"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    >

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="104dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/affligem" />

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="158dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/kordaat" />

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="149dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/desperados" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="129dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/heineken" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="198dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/amstel" />
                </LinearLayout>
            </HorizontalScrollView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:background="@color/secondary"
                android:paddingTop="16dp"
                android:paddingBottom="16dp">


                <com.google.android.gms.maps.MapView
                    android:id="@+id/mapView"
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/openingTimes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/openingstijden"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/mapView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />


                <TextView
                    android:id="@+id/Tuesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/dinsdag"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toStartOf="@+id/openingTimes"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/otherDays"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="8dp"
                    android:text="@string/other_days"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toStartOf="@+id/openingTimes"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/Tuesday" />

                <TextView
                    android:id="@+id/closed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/closed"
                    app:layout_constraintEnd_toStartOf="@+id/mapView"
                    app:layout_constraintHorizontal_bias="0.8"
                    app:layout_constraintStart_toEndOf="@+id/Tuesday"
                    app:layout_constraintTop_toTopOf="@+id/Tuesday" />

                <TextView
                    android:id="@+id/times"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/working_hours"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/mapView"
                    app:layout_constraintHorizontal_bias="0.781"
                    app:layout_constraintStart_toEndOf="@+id/otherDays"
                    app:layout_constraintTop_toBottomOf="@+id/closed"
                    app:layout_constraintVertical_bias="1.0" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:background="@color/secondary"
                android:paddingTop="16dp"
                android:paddingBottom="16dp">


                <TextView
                    android:id="@+id/contact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact"
                    android:textAlignment="center"
                    android:textSize="32sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/mail_adres"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.16"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/contact" />

                <TextView
                    android:id="@+id/phoneNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/phone_number"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.87"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/email" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="242dp"
                android:layout_marginTop="64dp">


                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_centerInParent="true"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/maaike" />


                <TextView
                    android:id="@+id/welkom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/imageView9"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="109dp"
                    android:layout_marginEnd="109dp"
                    android:layout_marginBottom="73dp"
                    android:gravity="center_horizontal"
                    android:text="@string/img_text_1"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/imageView9"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/img_text_2"
                    android:textColor="@color/white" />


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewP1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="32dp"
                    android:paddingEnd="32dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/paragraf_1"
                    android:textAlignment="center"
                    android:background="@color/secondary"/>

                <TextView
                    android:id="@+id/textViewP2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="32dp"
                    android:paddingEnd="32dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/paragraf_2"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/textViewP3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="32dp"
                    android:paddingEnd="32dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/paragraf_3"
                    android:textAlignment="center"
                    android:background="@color/secondary"/>

                <TextView
                    android:id="@+id/textViewP4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="32dp"
                    android:paddingEnd="32dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/paragraf_4"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/textViewP5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="32dp"
                    android:paddingEnd="32dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/paragraf_5"
                    android:textAlignment="center"
                    android:background="@color/secondary"/>

                <TextView
                    android:id="@+id/textViewP6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="32dp"
                    android:paddingEnd="32dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/paragraf_6"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/textViewP7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="32dp"
                    android:paddingEnd="32dp"
                    android:layout_marginBottom="80dp"
                    android:text="@string/paragraf_7"
                    android:textAlignment="center"
                    android:background="@color/secondary"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>