<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".UI.subscription.AbonnementFragment"
    android:background="@color/MainRed"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/Show"
            android:layout_width="245dp"
            android:layout_height="516dp"
            android:layout_marginStart="83dp"
            android:layout_marginTop="59dp"
            android:layout_marginEnd="83dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/border"
            android:elevation="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">


            <TextView
                android:id="@+id/textViewEmpty1"
                android:layout_width="225dp"
                android:layout_height="22dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textViewPrice"
                android:layout_width="225dp"
                android:layout_height="22dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="22dp"
                android:background="@color/secondary"
                android:gravity="center"
                android:text="@string/price"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="TextSizeCheck,TextSizeCheck" />

            <TextView
                android:id="@+id/textViewEmpty2"
                android:layout_width="225dp"
                android:layout_height="22dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="44dp"
                android:gravity="center"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textViewEmpty3"
                android:layout_width="225dp"
                android:layout_height="22dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="66dp"
                android:background="@color/secondary"
                android:gravity="center"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textViewCondition2"
                android:layout_width="225dp"
                android:layout_height="22dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="88dp"
                android:gravity="center"
                android:text="@string/condition2"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:id="@+id/textViewCondition1"
                android:layout_width="225dp"
                android:layout_height="22dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="110dp"
                android:background="@color/secondary"
                android:gravity="center"
                android:text="@string/condition1"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="TextSizeCheck,TextSizeCheck" />

            <TextView
                android:id="@+id/textViewEmpty4"
                android:layout_width="225dp"
                android:layout_height="22dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="132dp"
                android:gravity="center"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textViewDiscount"
                android:layout_width="225dp"
                android:layout_height="22dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="154dp"
                android:background="@color/secondary"
                android:gravity="center"
                android:text="@string/event_discount"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:id="@+id/textViewAndGet"
                android:layout_width="225dp"
                android:layout_height="22dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="176dp"
                android:gravity="center"
                android:text="@string/and_get"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:id="@+id/textViewBeerVariation"
                android:layout_width="225dp"
                android:layout_height="22dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="196dp"
                android:background="@color/secondary"
                android:gravity="center"
                android:text="@string/variation_on_tap"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:id="@+id/textViewOwnChoise"
                android:layout_width="225dp"
                android:layout_height="22dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="220dp"
                android:gravity="center"
                android:text="@string/own_choise"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:id="@+id/textViewAmountOfBeer"
                android:layout_width="225dp"
                android:layout_height="22dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="242dp"
                android:background="@color/secondary"
                android:gravity="center"
                android:text="@string/amount_of_beer"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:id="@+id/textViewSubscriptionTitle"
                android:layout_width="198dp"
                android:layout_height="39dp"
                android:layout_marginStart="62dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="62dp"
                android:gravity="center"
                android:text="@string/subscription_title"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.488"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="98dp"
                android:layout_height="112dp"
                android:rotation="-30"
                android:src="@drawable/logo_het_wapen"
                tools:layout_editor_absoluteX="76dp"
                tools:layout_editor_absoluteY="98dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView38"
            android:layout_width="214dp"
            android:layout_height="62dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="51dp"
            android:layout_marginBottom="68dp"
            android:gravity="center"
            android:text="@string/activate_subscription"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>